Fixed example snippet

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ void main() {
 var type = glslang.EShLangFragment;
 var source = `
     #version 150
-    out vec4 finalColor
+    out vec4 finalColor;
     void main() {
         finalColor = vec4(1.0, 1.0, 1.0, 1.0);
     }`;
